@@ -3,7 +3,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>assertj-core</artifactId>
-  <version>3.6.2-SNAPSHOT</version>
+  <version>3.10.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>AssertJ fluent assertions</name>
   <description>Rich and fluent assertions for testing for Java</description>
@@ -11,7 +11,8 @@
   <parent>
     <groupId>org.assertj</groupId>
     <artifactId>assertj-parent-pom</artifactId>
-    <version>2.1.4</version>
+    <version>2.1.9</version>
+    <relativePath />
   </parent>
   <mailingLists>
     <mailingList>
@@ -31,15 +32,26 @@
     <system>github</system>
     <url>https://github.com/joel-costigliola/assertj-core/issues</url>
   </issueManagement>
-  <properties>
-    <additionalparam>-Xdoclint:none</additionalparam>
-    <powermock.version>1.6.5</powermock.version>
-  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.opentest4j</groupId>
+      <artifactId>opentest4j</artifactId>
+      <version>1.0.0</version>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>1.3</version>
+      <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
@@ -48,36 +60,35 @@
     <dependency>
       <groupId>cglib</groupId>
       <artifactId>cglib-nodep</artifactId>
-      <version>3.2.4</version>
+      <version>3.2.5</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.ow2.asm</groupId>
       <artifactId>asm</artifactId>
-      <version>5.1</version>
+      <version>5.2</version>
       <optional>true</optional>
     </dependency>
-    <!--
-      NEEDED! Unlike File, a Path is not linked to the JRE's filesystem.
-
-      In order to accurately test assertions, we need a decent JSR 203 implementation
-      which lets us test our assertions. Right now, this is memoryfilesystem
-      (https://github.com/marschall/memoryfilesystem).
-
-      Another choice would be jimfs from Google (https://github.com/google/jimfs),
-      but its support for reading/writing file attributes is not as complete as that
-      of memoryfilesystem's.
-    -->
+    <!-- NEEDED! Unlike File, a Path is not linked to the JRE's filesystem. In order to accurately test assertions, we need 
+      a decent JSR 203 implementation which lets us test our assertions. Right now, this is memoryfilesystem (https://github.com/marschall/memoryfilesystem). 
+      Another choice would be jimfs from Google (https://github.com/google/jimfs), but its support for reading/writing file attributes 
+      is not as complete as that of memoryfilesystem's. -->
     <dependency>
       <groupId>com.github.marschall</groupId>
       <artifactId>memoryfilesystem</artifactId>
-      <version>0.8.0</version>
+      <version>1.0.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.tngtech.java</groupId>
-      <artifactId>junit-dataprovider</artifactId>
-      <version>1.12.0</version>
+      <groupId>com.tngtech.junit.dataprovider</groupId>
+      <artifactId>junit4-dataprovider</artifactId>
+      <version>2.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>20.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -102,7 +113,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>2.4.3</version>
+        <version>3.0.0</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -168,11 +179,25 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <configuration>
-          <skip>true</skip>
+          <excludes>
+            <exclude>**/*cglib*/**</exclude>
+            <!-- exclude hamcrest as its classes are compiled in target/classes for an unknown reason related to hancrest dependency being optional -->
+            <exclude>**/*hamcrest*/**</exclude>
+          </excludes>
         </configuration>
+        <!-- jacoco is executed in the prepare-package phase instead of the verify phase, it can not determine code coverage 
+          of the unpacked shaded classes -->
         <executions>
           <execution>
-            <id>check</id>
+            <id>jacoco-report</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>default-check</id>
+            <phase>prepare-package</phase>
             <goals>
               <goal>check</goal>
             </goals>
@@ -184,7 +209,7 @@
                     <limit implementation="org.jacoco.report.check.Limit">
                       <counter>CLASS</counter>
                       <value>COVEREDRATIO</value>
-                      <minimum>0.99</minimum>
+                      <minimum>0.98</minimum>
                     </limit>
                   </limits>
                 </rule>
@@ -192,15 +217,6 @@
             </configuration>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>animal-sniffer-maven-plugin</artifactId>
-        <version>1.14</version>
-        <configuration>
-          <!-- No need to check. There is also no Java 8 signature artifact -->
-          <skip>true</skip>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -213,6 +229,7 @@
             <script src="http://cdn.jsdelivr.net/highlight.js/8.6/highlight.min.js"></script>
           ]]></top>
           <!-- init Highlight -->
+          <additionalOptions>--allow-script-in-comments</additionalOptions>
           <footer><![CDATA[
             <script type="text/javascript">
               hljs.initHighlightingOnLoad();
@@ -251,4 +268,17 @@
       </plugins>
     </pluginManagement>
   </build>
+  <profiles>
+    <profile>
+      <id>java9</id>
+      <activation>
+        <jdk>9</jdk>
+      </activation>
+      <properties>
+        <!-- allow tests to access private fields/methods of java.base classes via reflection -->
+        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
+          --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED</argLine>
+      </properties>
+    </profile>
+  </profiles>
 </project>
